<resources>
    <string name="app_name">ImageScour</string>
    <string name="search">Search</string>
    <string name="search_filter">Filter your search</string>
    <string name="loading">Loading...</string>
    <string name="action_filter">Filter</string>
    <string name="image_size">Image Size</string>
    <string name="image_type">Image Type</string>
    <string name="as_sitesearch">Limit to Site</string>
    <string name="colorize">Colorize?</string>
    <string name="color_filter">Color Filter</string>
    <string name="example_domain">example.com</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="network_down">The network is down. Please check your internet.</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
</resources>
