<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_filter"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    >

    <TextView
        android:id="@+id/lblImageSize" android:text="@string/image_size"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerImageSize"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/lblImageType" android:text="@string/image_type"
        android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerImageType"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/lblAColorize" android:text="@string/colorize"
        android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerImageColorization"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/lblColorFilter" android:text="@string/color_filter"
        android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerColorFilter"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/lblAsSiteSearch" android:text="@string/as_sitesearch"
        android:layout_width="match_parent" android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etAsSiteSearch"
        android:layout_width="match_parent"  android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/example_domain" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:id="@+id/btnFilter"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/btnReset"
        android:layout_gravity="center_horizontal" />

</LinearLayout>