<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ImagesActivity">

    <item android:id="@+id/actionSearch"
        android:orderInCategory="10"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/mnuFilter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter"
        android:orderInCategory="50"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/miSearchSpinner"
        android:title="@string/loading"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="always"
        app:actionLayout="@layout/action_search_spinner" />
</menu>
